@@ -1,15 +1,11 @@
 #!/usr/bin/python3
 
-import codecs
-import errno
 import io
 import os
 import os.path
 import re
-import shutil
 import subprocess
 import sys
-import tempfile
 
 
 def main(repo, range='torvalds/master..dhowells/efi-lock-down'):
