@@ -1,7 +1,6 @@
 #!/usr/bin/python3
 
 import codecs
-import errno
 import io
 import os
 import os.path
