@@ -8,6 +8,7 @@ linux (4.19~rc6-1~exp1) UNRELEASED; urgency=medium
   * debian/bin, debian/lib/python: Fix most errors reported by pycodestyle
   * debian/bin, debian/rules.real: Add symlink to Python package directory
     instead of editing path
+  * debian/bin, debian/lib/python: Clean up imports based on pyflakes report
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 20 Sep 2018 02:40:54 +0100
 
